--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <!--(konten sebelumnya)...-->
        <img src=''3987beb4289cf7a45b94e2e2a73aaeb9.jpg'' alt=''foto profil saya''>
        <! -- konten yang terlihat oleh pengunjung akan ada di sini  -- >
-     <img src=''foto-profil.jpg'' alt=''foto profil saya''>
+     <img src=''3987beb4289cf7a45b94e2e2a73aaeb9.jpg'' alt=''foto profil saya''>
      <h1>Nama Lengkap Anda</h1>
      <p>Siswa SMA yang trkait dengan teknologi dan deain.
 selamat datang di website pertama saya!</p>
