--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-       <title>Profil saya</title>
-</head>
-    <title>Profil Digital - [Nama  Anda]</title>
-  <link rel="stylesheet" href="style.css">
+       <title>Profil saya - Vew Gunung</title/title>
+       <link rel="stylesheet" href=''style.css">
 </head>
 <body>
-   <div class=;;kartu-profil''>
-     <!--(konten sebelumnya)...-->
-       <img src=''3987beb4289cf7a45b94e2e2a73aaeb9.jpg'' alt=''foto profil saya''>
-       <! -- konten yang terlihat oleh pengunjung akan ada di sini  -- >
-     <img src=''3987beb4289cf7a45b94e2e2a73aaeb9.jpg'' alt=''foto profil saya''>
-     <h1>Nama Lengkap Anda</h1>
-     <p>Siswa SMA yang trkait dengan teknologi dan deain.
-selamat datang di website pertama saya!</p>
-     <a
-href=''https://www.instagram.com/usernameanda'' Kunjungi Instagram Saya </a>
+    <div class="kartu-profil">
+      <img src="view.jpg" alt="foto profil saya">
+      <h1>Nama Lengkap Anda</h1>   
+      <p>Siswa SMA yang trkait dengan teknologi dan deain. selamat datang di website pertama saya!</p>
+      <a href="https://www.instagram.com/usernameanda">Kunjungi Instagram Saya </a>
+      <button id=''sapaButton''<Sapa Saya!</button>
+  </div>
 <script src=''script.js''></script>
 </body>
 </html>
